Fixed spacing on smaller monitors

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ h2 {
 
 p {
 	font-size: 1.2em;
-	text-align: justify;
 }
 
 p.pizza {
